syntax = "proto3";

option csharp_namespace = "FilesService";

import "google/protobuf/timestamp.proto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc StreamingFromServer (ExampleRequest) returns (stream ExampleResponse);
  rpc SendMessage (stream ClientToServerMessage) returns (stream ServerToClientMessage);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message ExampleRequest{
	int32 number = 1;
}

message ExampleResponse{
	int32 numbers = 1;
}

message ClientToServerMessage{
	string text = 1;
}
message ServerToClientMessage{
	string text = 1;
	google.protobuf.Timestamp timestamp = 2;
}